{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 14,
  "lineage": "4eb07872-ab20-f9c3-75f3-e1f6f8e13792",
  "resources": [
    {
      "module": "module.ec2mod",
      "mode": "managed",
      "type": "aws_eip",
      "name": "jeip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d018a41ec6efdd1c",
            "association_id": "eipassoc-02edce9dd4e183314",
            "domain": "vpc",
            "id": "eipalloc-0d018a41ec6efdd1c",
            "instance": "i-08e7f9007af5739ea",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0c82b7ac99f723473",
            "private_dns": "ip-10-0-1-220.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.220",
            "public_dns": "ec2-54-179-106-108.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.179.106.108",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Jenkins-EIP"
            },
            "tags_all": {
              "Name": "Jenkins-EIP"
            },
            "vpc": true
          },
          "dependencies": [
            "module.ec2mod.aws_instance.JenkinsVM",
            "module.vpcmod.aws_internet_gateway.igw",
            "module.vpcmod.aws_route.awsroute",
            "module.vpcmod.aws_route_table.publicroute",
            "module.vpcmod.aws_route_table_association.pubrtass1a",
            "module.vpcmod.aws_route_table_association.pubrtass1b",
            "module.vpcmod.aws_security_group.appsg",
            "module.vpcmod.aws_security_group.jenkinssg",
            "module.vpcmod.aws_subnet.public_subneta",
            "module.vpcmod.aws_subnet.public_subnetb",
            "module.vpcmod.aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2mod",
      "mode": "managed",
      "type": "aws_instance",
      "name": "JenkinsVM",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0df7a207adb9748c7",
            "arn": "arn:aws:ec2:ap-southeast-1:490167669940:instance/i-08e7f9007af5739ea",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08e7f9007af5739ea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "ravikiran-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c82b7ac99f723473",
            "private_dns": "ip-10-0-1-220.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.220",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:490167669940:key/f802b834-1da0-4a12-848d-bd6164911b9e",
                "throughput": 125,
                "volume_id": "vol-0601d9ab44b419d3c",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05afb81053ec0e38a",
            "tags": {
              "Name": "AWS-Jenkins-VM-DO-NOT-DELETE"
            },
            "tags_all": {
              "Name": "AWS-Jenkins-VM-DO-NOT-DELETE"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-052480fa24b0fc890"
            ]
          },
          "dependencies": [
            "module.vpcmod.aws_internet_gateway.igw",
            "module.vpcmod.aws_route.awsroute",
            "module.vpcmod.aws_route_table.publicroute",
            "module.vpcmod.aws_route_table_association.pubrtass1a",
            "module.vpcmod.aws_route_table_association.pubrtass1b",
            "module.vpcmod.aws_security_group.appsg",
            "module.vpcmod.aws_security_group.jenkinssg",
            "module.vpcmod.aws_subnet.public_subneta",
            "module.vpcmod.aws_subnet.public_subnetb",
            "module.vpcmod.aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpcmod",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:490167669940:internet-gateway/igw-0c3ff29b44910ac56",
            "id": "igw-0c3ff29b44910ac56",
            "owner_id": "490167669940",
            "vpc_id": "vpc-0b4dd6c14a6daa746"
          },
          "dependencies": [
            "module.vpcmod.aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpcmod",
      "mode": "managed",
      "type": "aws_route",
      "name": "awsroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c3ff29b44910ac56",
            "id": "r-rtb-0b04adfb8c39c7eba1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b04adfb8c39c7eba",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcmod.aws_internet_gateway.igw",
            "module.vpcmod.aws_route_table.publicroute",
            "module.vpcmod.aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpcmod",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:490167669940:route-table/rtb-0b04adfb8c39c7eba",
            "id": "rtb-0b04adfb8c39c7eba",
            "owner_id": "490167669940",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b4dd6c14a6daa746"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcmod.aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpcmod",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubrtass1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ed6ea2a8ff2e0f4",
            "route_table_id": "rtb-0b04adfb8c39c7eba",
            "subnet_id": "subnet-05afb81053ec0e38a"
          },
          "dependencies": [
            "module.vpcmod.aws_route_table.publicroute",
            "module.vpcmod.aws_subnet.public_subneta",
            "module.vpcmod.aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpcmod",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubrtass1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1e403edb446ec2f",
            "route_table_id": "rtb-0b04adfb8c39c7eba",
            "subnet_id": "subnet-047dc99f797365878"
          },
          "dependencies": [
            "module.vpcmod.aws_route_table.publicroute",
            "module.vpcmod.aws_subnet.public_subnetb",
            "module.vpcmod.aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpcmod",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "appsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:490167669940:security-group/sg-08f26f55dc06b0165",
            "description": "app-Security",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f26f55dc06b0165",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app-Security",
            "name_prefix": "",
            "owner_id": "490167669940",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b4dd6c14a6daa746"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcmod.aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpcmod",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkinssg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:490167669940:security-group/sg-052480fa24b0fc890",
            "description": "Jenkins-Security",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-052480fa24b0fc890",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Jenkins-Security",
            "name_prefix": "",
            "owner_id": "490167669940",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b4dd6c14a6daa746"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcmod.aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpcmod",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subneta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:490167669940:subnet/subnet-05afb81053ec0e38a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05afb81053ec0e38a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "490167669940",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws-public-subent-1a"
            },
            "tags_all": {
              "Name": "aws-public-subent-1a"
            },
            "vpc_id": "vpc-0b4dd6c14a6daa746"
          },
          "dependencies": [
            "module.vpcmod.aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpcmod",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnetb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:490167669940:subnet/subnet-047dc99f797365878",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047dc99f797365878",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "490167669940",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws-public-subent-1b"
            },
            "tags_all": {
              "Name": "aws-public-subent-1b"
            },
            "vpc_id": "vpc-0b4dd6c14a6daa746"
          },
          "dependencies": [
            "module.vpcmod.aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpcmod",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:490167669940:vpc/vpc-0b4dd6c14a6daa746",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05ae73c41f6a83c30",
            "default_route_table_id": "rtb-0812bfaa9215821af",
            "default_security_group_id": "sg-0dd9320ca7766605c",
            "dhcp_options_id": "dopt-29eef14e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b4dd6c14a6daa746",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0812bfaa9215821af",
            "owner_id": "490167669940",
            "tags": {
              "Name": "aws-vpc"
            },
            "tags_all": {
              "Name": "aws-vpc"
            }
          }
        }
      ]
    }
  ]
}